2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move remaining parse state into `struct parse_state'.

	* base.h (parse_state.next): Add member `hsh'.
	(parse_state): Add members `rilebuf', `Oerrloop', `ignoredp', `hshtab'.
	* rcslex.c (nexthsh, hshtab, ignored_phrases): Delete vars.
	(warnignore): Use `LEX (ignoredp)'.
	(lookup): Use `LEX (hshtab)', `NEXT (hsh)'.
	(Lexinit): Allocate `LEX (hshtab)' if necessary;
	clear `LEX (Oerrloop)'; use `LEX (ignoredp)'.
	(getnum): Use `NEXT (hsh)'.
	(fd2_RILE): Init `LEX (rilebuf)' if necessary.
	(Oerrloop): Delete var.
	(Oerror, oflush): Use `LEX (Oerrloop)'.
	[LEXDB] (main): Use `LEX (hshtab)'.

2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use a space for the token buffer.

	* base.h (manifestation): Add member `tokbuf'.
	* rcslex.c (tokbuf): Delete var.
	(lookup): Take `char *', not `struct buf *';
	save to `single' directly.
	(Lexinit): Init `LEX (tokbuf)' as a space.
	(nextlex): Accumulate bytes into `LEX (tokbuf)'; avoid realloc.

2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Do ISR allocation early on, for all programs.

	* rcsutil.c (gnurcs_init): Init `ISR_SCRATCH' here.
	* rcsedit.c (rcswriteopen): Don't init `ISR_SCRATCH'.
	* rcslex.c (fd2_RILE): Likewise.
	* b-isr.h (ISR_ENABLE): Delete unused macro.

2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Get rid of `bufremember'.

	* base.h (bufremember): Delete func decl.
	* rcsfnms.c (bufremember): Delete func.
	* rcslex.c (getphrases) [!large_memory]: Use `intern' directly.

2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Add to `single' space directly when keeping a date.

	* rcskeep.c: #include "b-divvy.h".
	(keepdate): Don't call `fbuf_save'; add directly to `single'.

2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Apply tmpdir `SLASH'-suffixing to all candidates.

	* rcsfnms.c (set_temporary_file_name): Use `getenv' directly;
	do `SLASH'-suffixing for any `tmpdir' found, not just `P_tmpdir'.
